<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="3dp"
    android:background="@drawable/layer_card_background"
    android:minHeight="?android:attr/listPreferredItemHeight"
    android:orientation="vertical"
    android:padding="1dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp" >

        <ImageView
            android:id="@+id/category_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_shape"
            android:contentDescription="@string/title_activity_category"
            android:scaleType="centerInside"
            android:src="@drawable/ic_launcher5" />

        <TextView
            android:id="@+id/category_title_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:hint="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold|normal"
            android:typeface="serif" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/contact"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp" >

            <TextView
                android:id="@+id/category_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginRight="20dp"
                android:hint="@string/date"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="17sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="5dp"
                android:gravity="right" >

                <ToggleButton
                    android:id="@+id/toggleElectionState"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:background="#fff"
                    android:button="@android:drawable/presence_online"
                    android:checked="true"
                    android:text="@string/eventlive"
                    android:textColor="#598"
                    android:textOff="@string/eventdead"
                    android:textOn="@string/eventlive" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="3dp"
            android:orientation="horizontal" >

            <!--
    
    <ImageButton
        android:id="@+id/buttonCategoryDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginTop="5dp"
        android:background="#E14627"
        android:contentDescription="@string/delete"
        android:minHeight="50dp"
        android:minWidth="50dp"
        android:scaleType="fitXY"
        android:src="@android:drawable/ic_menu_delete" />
            -->

            <Button
                android:id="@+id/btn_learnmore"
                style="android:buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_marginRight="2dp"
                android:layout_weight="0.33"
                android:background="#ccc"
                android:drawableLeft="@android:drawable/ic_menu_help"
                android:text="@string/about"
                android:textColor="#111" />

            <Button
                android:id="@+id/btn_enter"
                style="android:buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_marginRight="2dp"
                android:layout_weight="0.33"
                android:background="#ccc"
                android:drawableLeft="@drawable/ic_engage1_unselected"
                android:text="@string/enter"
                android:textColor="#111" />

            <Button
                android:id="@+id/buttonCategoryDelete"
                style="android:buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_weight="0.33"
                android:background="#ccc"
                android:drawableLeft="@android:drawable/ic_menu_delete"
                android:text="@string/delete"
                android:textColor="#111" />

        </LinearLayout>

<!--   <Button
      android:id="@+id/btn_learnmor"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="left"
      android:layout_marginRight="2dp"
      android:layout_weight="1"
      android:background="#ccc"
      android:drawableTop="@android:drawable/ic_menu_info_details"
      android:minWidth="150dip"
      android:text="@string/details" />

            <Button
                android:id="@+id/btn_ente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:background="#ff1ca8f4"
                android:drawableTop="@android:drawable/ic_menu_view"
                android:minWidth="120dip"
                android:text="@string/enter" /> -->
    </LinearLayout>

</LinearLayout>
