<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/profileScroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ccc" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ccc"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/nomineeProfile"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:background="#eee"
            android:orientation="vertical" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#ff1ca8f4"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:id="@+id/nomineeName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/nominee"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#00AE68"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/nominee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/nomination"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#000099"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/nomineeInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="#fff"
                android:hint="@string/description"
                android:minLines="3"
                android:scrollHorizontally="true"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/voteactor"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000099"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/voteNominee"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:adjustViewBounds="true"
                android:background="@drawable/profile_preview"
                android:contentDescription="@string/voteactor"
                android:cropToPadding="true"
                android:scaleType="fitStart"
                android:src="@drawable/ic_engage1_unselected" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>